# PlayingWithGtest

./: CMakeLists.txt  README.md  main.cpp  whattotest.cpp
